--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Expressions\AttributeTests.cs" />
     <Compile Include="Expressions\ParentTests.cs" />
+    <Compile Include="Expressions\PositionTests.cs" />
     <Compile Include="Model\ElementTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Expressions\SiblingTests.cs" />
