--- a/LambdaToXpath/LambdaToXpath.csproj
+++ b/LambdaToXpath/LambdaToXpath.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ElementParser.cs" />
     <Compile Include="CreateXpath.cs" />
+    <Compile Include="Model\Relative.cs" />
     <Compile Include="Model\Attribute.cs" />
     <Compile Include="Model\Element.cs" />
     <Compile Include="Model\Parent.cs" />
