--- a/LambdaToXpath/LambdaToXpath.csproj
+++ b/LambdaToXpath/LambdaToXpath.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ElementParser.cs" />
-    <Compile Include="XpathExpressionParser.cs" />
+    <Compile Include="LambdaExpressionParser.cs" />
     <Compile Include="CreateXpath.cs" />
     <Compile Include="Model\Relative.cs" />
     <Compile Include="Model\Attribute.cs" />
