--- a/LambdaToXpath/LambdaToXpath.csproj
+++ b/LambdaToXpath/LambdaToXpath.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ElementParser.cs" />
+    <Compile Include="ExpressionTerm.cs" />
     <Compile Include="LambdaExpressionParser.cs" />
     <Compile Include="CreateXpath.cs" />
     <Compile Include="Model\Relative.cs" />
