--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Expressions\AttributeTests.cs" />
     <Compile Include="Expressions\DecendantAndAncestorTests.cs" />
+    <Compile Include="Expressions\MiscTests.cs" />
     <Compile Include="Expressions\NoConflictTests.cs" />
     <Compile Include="Expressions\NonElementReturnsTests.cs" />
     <Compile Include="Expressions\NotSupportedExpressionsTests.cs" />
